fix - UI : notif container and player icon in game creation was too small for smaller resolution, value were hardcoded; now dynamically calculated based on user width screen

--- a/asset/style.css
+++ b/asset/style.css
@@ -54,6 +54,7 @@ body {
 	justify-content: center;
 	width: 100%;
 	height: 300px;
+	margin-top: 0.1rem;
 	display: flex;
 }
 
